3.cityapp-php/yaml/cityapp-conjurtok8ssecret.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cityapp-conjurtok8ssecret
  labels:
    app: cityapp-conjurtok8ssecret
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: cityapp-conjurtok8ssecret
  type: LoadBalancer
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cityapp-conjurtok8ssecret
  name: cityapp-conjurtok8ssecret
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: cityapp-conjurtok8ssecret
  wildcardPolicy: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cityapp-conjurtok8ssecret
  name: cityapp-conjurtok8ssecret
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cityapp-conjurtok8ssecret
  template:
    metadata:
      labels:
        app: cityapp-conjurtok8ssecret
      annotations:
        conjur.org/container-mode: sidecar
        conjur.org/secrets-refresh-interval: 30s
    spec:
      serviceAccountName: cityapp-conjurtok8ssecret
      hostAliases:
      - ip: "{LAB_IP}"
        hostnames:
        - "mysql.{LAB_DOMAIN}"
        - "conjur-master.{LAB_DOMAIN}"           
      containers:
      - name: cityapp
        image: default-route-openshift-image-registry.apps-crc.testing/cityapp/cityapp
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: conjur-access-token
            mountPath: /conjur
            readOnly: true
          - name: secret-volume
            mountPath: /etc/secret-volume
      - name: conjurtok8ssecret
        image: docker.io/cyberark/secrets-provider-for-k8s:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: jwt-token
          mountPath: /var/run/secrets/tokens
        - mountPath: /run/conjur
          name: conjur-access-token
        - mountPath: /etc/conjur/ssl
          name: conjur-certs
        - mountPath: /conjur/podinfo
          name: podinfo
      volumes:
        - name: secret-volume
          secret:
            secretName: db-creds
        - name: podinfo
          downwardAPI:
            items:
              - path: annotations
                fieldRef:
                  fieldPath: metadata.annotations
        - name: conjur-access-token
          emptyDir:
            medium: Memory
        - name: conjur-certs
          emptyDir:
            medium: Memory
        - name: jwt-token
          projected:
            sources:
              - serviceAccountToken:
                  path: jwt
                  expirationSeconds: 6000
                  audience: cybrdemo
