3.cityapp-php/yaml/cityapp-hardcode.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cityapp-hardcode
  labels:
    app: cityapp-hardcode
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: cityapp-hardcode
  type: LoadBalancer
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cityapp-hardcode
  name: cityapp-hardcode
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: cityapp-hardcode
  wildcardPolicy: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cityapp-hardcode
  name: cityapp-hardcode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cityapp-hardcode
  template:
    metadata:
      labels:
        app: cityapp-hardcode
    spec:
      serviceAccountName: cityapp-hardcode
      hostAliases:
      - ip: "{LAB_IP}"
        hostnames:
        - "mysql.{LAB_DOMAIN}"
      containers:
      - image: default-route-openshift-image-registry.apps-crc.testing/cityapp/cityapp
        imagePullPolicy: IfNotPresent
        name: cityapp
        ports:
        - containerPort: 80
          name: http
