3.cityapp-php/yaml/cityapp-secretless.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cityapp-secretless
  labels:
    app: cityapp-secretless
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: cityapp-secretless
  type: LoadBalancer
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cityapp-secretless
  name: cityapp-secretless
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: cityapp-secretless
  wildcardPolicy: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cityapp-secretless
  name: cityapp-secretless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cityapp-secretless
  template:
    metadata:
      labels:
        app: cityapp-secretless
    spec:
      serviceAccountName: cityapp-secretless
      hostAliases:
      - ip: "{LAB_IP}"
        hostnames:
        - "mysql.{LAB_DOMAIN}"      
        - "conjur-master.{LAB_DOMAIN}"
      containers:
      - name: cityapp
        image: default-route-openshift-image-registry.apps-crc.testing/cityapp/cityapp
        imagePullPolicy: IfNotPresent
      - name: secretless
        image: docker.io/cyberark/secretless-broker:latest
        imagePullPolicy: IfNotPresent
        args: ["-f", "/etc/secretless/cityapp-secretless-cm.yaml"]
        volumeMounts:
        - mountPath: /etc/secretless
          name: config
          readOnly: true
        - mountPath: /var/run/secrets/tokens
          name: jwt-token
      volumes:
        - name: jwt-token
          projected:
            sources:
              - serviceAccountToken:
                  path: jwt
                  expirationSeconds: 6000
                  audience: cybrdemo
        - name: config
          configMap:
            name: cityapp-secretless-cm
