3.cityapp-php/yaml/cityapp-springboot.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cityapp-springboot
  labels:
    app: cityapp-springboot
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: cityapp-springboot
  type: LoadBalancer
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cityapp-springboot
  name: cityapp-springboot
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: cityapp-springboot
  wildcardPolicy: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cityapp-springboot
  name: cityapp-springboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cityapp-springboot
  template:
    metadata:
      labels:
        app: cityapp-springboot
      annotations:
        conjur.org/container-mode: sidecar
        conjur.org/secrets-refresh-interval: 30s
    spec:
      serviceAccountName: cityapp-springboot
      hostAliases:
      - ip: "{LAB_IP}"
        hostnames:
        - "mysql.{LAB_DOMAIN}"
        - "conjur-master.{LAB_DOMAIN}"
        - "conjur-master.demo.localhttps"
      containers:
      - name: cityapp
        image: doduchuy/cityapp-conjur-springboot-plugin:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /var/run/secrets/tokens
          name: jwt-token
      volumes:
        - name: jwt-token
          projected:
            sources:
              - serviceAccountToken:
                  path: jwt
                  expirationSeconds: 6000
                  audience: cybrdemo
